Further unsuccessful collapsing menu bug fix attempts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -988,17 +988,20 @@ input[type=number] {
       display: none;
    }
 
-   .menu-box {
-      width: 170px;
-      margin-left: -70px;
-      margin-top: -40px;
-      position: relative;
-      padding: 20px;
-      align-items: center;
-      background-color: #f2f2f2;
-      transition: all 1s ease;
-      
-    }
+    .menu-box {
+        width: 170px;
+        height: auto;
+        margin-left: -70px;
+        margin-top: -40px;
+        position: relative;
+        padding: 20px;
+        align-items: center;
+        background-color: #fff;
+        border:rgba(241, 109, 107, .7) 2px solid;
+        border-radius: 4px;
+        transition: all 1s ease;
+        z-index: 4;
+        }
     
     .menu-box li {
        list-style-type: none;
@@ -1040,19 +1043,19 @@ input[type=number] {
       transform-origin: left;
   }
   
-  .menu-box.active {
+  .menu-box.pressed {
       transform: translateX(170px);
   }
   
-  .line-container.active .line-1 {
+  .line-container.pressed .line-1 {
       transform: rotate(45deg);
   }
   
-  .line-container.active .line-2 {
+  .line-container.pressed .line-2 {
       opacity: 0;
   }
   
-  .line-container.active .line-3 {
+  .line-container.pressed .line-3 {
       transform: rotate(-45deg);
   }
 }
